# gemini-scraper

./: .gitignore  README.md  filtered_dataset.json  finall_result.json  pyproject.toml
src/: browser_core.py  config.py  domain.py  main.py  orchestrator.py  orchestrator_old.py  page_handler.py
utils/: _0c_simple_db.py  _1create_prompts.py  _2convert_output.py  _3map_promptoutput_dataset.py  c_simple_db.py
