[project]
name = "gemini-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "amir.espahbodi",email = "dev.amir.espahbodi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "playwright (>=1.56.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[tool.poetry]
packages = [{include = "gemini_scraper", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
